k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: ivolveacrproj123.azurecr.io/auth-service:fd6acc02f2d206e842274097ef164f4f1ff6572f
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ivolve
spec:
  selector:
    app: auth-service
  ports:
  - port: 5000
    targetPort: 5000
