k8s/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "ivolve/simplest"
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ivolveacrproj123.azurecr.io/frontend:b87d75f3e8cd6885d3f56e1e2494d0b26da88f0d
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ivolve
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
