k8s/roadmap-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roadmap-service
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: roadmap-service
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "ivolve/simplest"
      labels:
        app: roadmap-service
    spec:
      containers:
      - name: roadmap-service
        image: ivolveacrproj123.azurecr.io/roadmap-service:b87d75f3e8cd6885d3f56e1e2494d0b26da88f0d
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: roadmap-service
  namespace: ivolve
spec:
  selector:
    app: roadmap-service
  ports:
  - port: 8080
    targetPort: 8080
